# DroidDock

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE-NOTES.md  linkedin-post.md  linkedin-post.txt  mprocs.yaml  package-lock.json  package.json
.github/workflows/: release.yml
docs/: DISTRIBUTION-IMPLEMENTATION.md  QUICK-START-DISTRIBUTION.md  SETUP-GITHUB.md  index.html
docs/design/: ICON-README.md
docs/releases/: v0.2.0.html  v0.2.1.html  v0.2.2.html  v0.3.0.html  v0.4.0.html  v0.4.1.html
impl/: fix-jpg-preview-unsupported-error.md  fix-preview-path-spaces.md  fix-shift-arrow-selection-anchor.md  homebrew-cask-integration.md  mac-finder-keyboard-behavior.md  pr-41-review-fixes.md  preview-arrow-navigation.md
scripts/: release-prepare.js
src/: App.css  App.css.bak  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
yc-news/: v0.2.0.txt  v0.2.1.txt
